# ToDoList_Project

./: alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: abef9db6e86b_create_project_and_task_tables.py
app/: cli.py  database.py  exceptions.py  models.py  repositories.py  services.py  sqlalchemy_repositories.py
app/models/: __init__.py  project.py  task.py
