[project]
name = "todolist-project"
version = "0.1.0"
description = "A simple ToDoList application with OOP principles"
authors = [
    {name = "itsaboutarman",email = "armansalehi82@aut.ac.ir"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "psycopg[binary] (>=3.2.10,<4.0.0)",
    "alembic (>=1.16.5,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "typer[all] (>=0.19.2,<0.20.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
